<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MIDISynth" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="NzE-Wn-I3i">
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiY-e1-aNl">
                                        <state key="normal" title="Patch 1"/>
                                        <connections>
                                            <action selector="patch1Off:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nd8-jG-lRW"/>
                                            <action selector="patch1On:" destination="BYZ-38-t0r" eventType="touchDown" id="q7a-mm-Twc"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLt-cw-HI6">
                                        <state key="normal" title="Patch 2"/>
                                        <connections>
                                            <action selector="patch2Off:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ffJ-K0-ozP"/>
                                            <action selector="patch2On:" destination="BYZ-38-t0r" eventType="touchDown" id="E7Z-vr-8TL"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8gw-vR-dWM">
                                        <state key="normal" title="Sequence"/>
                                        <connections>
                                            <action selector="playSequence:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aj6-7H-tDl"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zUH-SG-WP5">
                                        <state key="normal" title="AV sequence"/>
                                        <connections>
                                            <action selector="playSS:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LdS-Sg-7C8"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="NzE-Wn-I3i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="BF9-hk-7tk"/>
                            <constraint firstItem="NzE-Wn-I3i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hSb-yL-9vB"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
